<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">云报销</string>
    <string name="background">背景</string>
    <string name="settings">设置</string>
    <string name="ok">好</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="not_available">N/A</string>
    <string name="empty">无</string>
    <string name="chinese">中文</string>
    <string name="english">English</string>
    <string name="rmb">元</string>
    <string name="plus">+</string>
    <string name="percent">%</string>
    <string name="dash">-</string>
    <string name="to">至</string>
    <string name="rmb_symbol">¥</string>
    <string name="ten_thousand">万</string>
    <string name="one_hundred_million">亿</string>
    <string name="china_country_code">86</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">天</string>
    <string name="second">秒</string>
    <string name="total">总计</string>
    <string name="city">市</string>
    <string name="province">省</string>
    <string name="region">自治区</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="person">人</string>
    <string name="confirm">确定</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="establish">新建</string>
    <string name="back">返回</string>
    <string name="complete">完成</string>
    <string name="next">下一步</string>
    <string name="send">发送</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="tip">提示</string>
    <string name="error">错误</string>
    <string name="warning">警告</string>
    <string name="option">选项</string>
    <string name="search">搜索</string>
    <string name="status">状态</string>
    <string name="all">全部</string>
    <string name="detail">详情</string>
    <string name="loading">等待</string>
    <string name="image">图片</string>
    <string name="check">选中</string>
    <string name="skip">直接跳过</string>
    <string name="alarm">提醒</string>
    <string name="finish">直接通过</string>
    <string name="exit">退出</string>
    <string name="create">创建</string>
    <string name="guide">指导</string>
    <string name="manual">手动</string>
    <string name="unbind">解绑</string>
    <string name="hot">热门</string>
    <string name="password">密码</string>
    <string name="wechat_session">微信好友</string>
    <string name="wechat_moments">朋友圈</string>
    <string name="didi">滴滴打车</string>
    <string name="uber">Uber</string>
    <string name="sign_up">注册</string>
    <string name="quick_sign_up">快速注册</string>
    <string name="sign_up_by_phone">手机注册</string>
    <string name="sign_up_by_email">邮箱注册</string>
    <string name="sign_in">登录</string>
    <string name="experience">直接体验>></string>
    <string name="third_party_sign_in">第三方账号登录</string>
    <string name="other_sign_up_ways">其它注册方式</string>
    <string name="forgot_password">忘记密码</string>
    <string name="find_password_by_phone">手机找回</string>
    <string name="find_password_by_email">邮箱找回</string>
    <string name="acquire_code">获取验证码</string>
    <string name="send_verify_email">发送验证邮件</string>
    <string name="reset_password">设置新密码</string>
    <string name="complete_info">完善个人信息</string>
    <string name="welcome_to_use">欢迎使用云报销</string>
    <string name="introduction">「云报销」是一款财务报销管理工具。你可以在这里随时进行费用记录、申请和审批，也可以更好地管理企业的支出。开始使用前，请先用30秒设置你的账户。</string>
    <string name="join_company">加入公司</string>
    <string name="are_you_admin">您是管理员？</string>
    <string name="search_company_name">搜索公司名称</string>
    <string name="create_new_company">创建新公司</string>
    <string name="input_contact_manually">手动填写手机或邮箱</string>
    <string name="contact_invite">手机联系人邀请</string>
    <string name="wechat_invite">微信好友邀请</string>
    <string name="contact">通讯录</string>
    <string name="no_contacts">没有检索到联系人</string>
    <string name="open_settings">打开设置</string>
    <string name="input_contact">填写手机号或邮箱</string>
    <string name="input_contact_manually_and_divided">请手动填写手机号或邮箱，用逗号分开</string>
    <string name="invite_by_pc">可通过访问网页端批量邀请其他同事加入</string>
    <string name="invitation_sent">已经向你的 %1$d 个同事发送邀请。他们接受邀请后，就能加入你创建的公司。你也可以通过我们的 网页端 批量邀请其他同事加入。</string>
    <string name="start_to_use">开始使用</string>
    <string name="create_prompt">你可以之后在应用中通过短信或者邮件的方式邀请其他同事加入，也可以通过我们的 网页端 批量邀请他人。</string>
    <string name="modify_name">设置姓名</string>
    <string name="choose_company">选择公司</string>
    <string name="invited_company">邀请过你的公司</string>
    <string name="search_result">搜索结果</string>
    <string name="search_result_empty">没有符合条件的公司</string>
    <string name="copy_link"><u>复制链接</u></string>
    <string name="applied_to_join">已申请加入</string>
    <string name="joined">你已加入</string>
    <string name="reimbursement">消费</string>
    <string name="report">报告</string>
    <string name="statistics">统计</string>
    <string name="me">自己</string>
    <string name="reim_guide">点击＋开始记录你的第一笔消费</string>
    <string name="report_guide">点击这里创建报告，提交你的报销</string>
    <string name="sort">排序</string>
    <string name="sort_consumed_date">消费时间</string>
    <string name="sort_amount">金额</string>
    <string name="sort_update_date">修改时间</string>
    <string name="sort_create_date">创建时间</string>
    <string name="filter">筛选</string>
    <string name="filter_all">全部</string>
    <string name="filter_consumed">报销</string>
    <string name="filter_budget">预算</string>
    <string name="filter_borrowing">借款</string>
    <string name="filter_added">已加入报告</string>
    <string name="filter_free">未加入报告</string>
    <string name="filter_tag">标签</string>
    <string name="filter_category">类别</string>
    <string name="invoice">发票</string>
    <string name="reim_type">报销类型</string>
    <string name="consumed">报销</string>
    <string name="budget">预算</string>
    <string name="borrowing">预借</string>
    <string name="need_reimburse">需收款</string>
    <string name="does_not_need_reimburse">（不需收款）</string>
    <string name="actual_cost">实际消费</string>
    <string name="modify_history">修改历史</string>
    <string name="modify_history_hint">修改历史 ></string>
    <string name="type">类　型</string>
    <string name="photo">照　片</string>
    <string name="category">类　别</string>
    <string name="vendor">商　家</string>
    <string name="location">地　点</string>
    <string name="tag">标　签</string>
    <string name="member">参与者</string>
    <string name="time">时　间</string>
    <string name="currency">货　币</string>
    <string name="note">备　注</string>
    <string name="count">人　数</string>
    <string name="transport">交通</string>
    <string name="choose_consumed_date">请选择消费时间</string>
    <string name="choose_end_time">请选择结束时间</string>
    <string name="choose_category">选择类别</string>
    <string name="choose_vendor">选择商家</string>
    <string name="choose_location">选择城市</string>
    <string name="choose_tag">选择标签</string>
    <string name="choose_member">选择参与人</string>
    <string name="take_photo">拍照</string>
    <string name="choose_from_gallery">从手机相册选择</string>
    <string name="current_location">当前城市</string>
    <string name="hot_cities">热门城市</string>
    <string name="all_cities">全部城市</string>
    <string name="only_save">仅保存</string>
    <string name="send_to_approve">发送审批</string>
    <string name="report_not_available">未加入报告</string>
    <string name="vendor_not_available">未填写商家</string>
    <string name="pick_image">选择图片</string>
    <string name="from_to">从 %1$s 至 %2$s</string>
    <string name="my_report">我的报告</string>
    <string name="others_report">收到的报告</string>
    <string name="pending">待处理</string>
    <string name="processed">已处理</string>
    <string name="report_detail">报告详情</string>
    <string name="report_budget">预算申请</string>
    <string name="report_borrowing">借款申请</string>
    <string name="comment">评论</string>
    <string name="add_comment">添加评论</string>
    <string name="check_comment">查看评论</string>
    <string name="sender">创建人</string>
    <string name="submit_to">提交至</string>
    <string name="approver">审核人</string>
    <string name="cc">抄　送</string>
    <string name="total_amount">总　额</string>
    <string name="equivalent_amount">折　合</string>
    <string name="item_count">%1$d笔消费</string>
    <string name="item_count_added">已添加%1$d笔消费</string>
    <string name="choose_manager">选择审批人</string>
    <string name="choose_cc">选择抄送人</string>
    <string name="admin">公司管理员</string>
    <string name="submit">提交</string>
    <string name="revoke">撤回</string>
    <string name="confirm_paid">确认已收款</string>
    <string name="approve">通过</string>
    <string name="reject">退回</string>
    <string name="reject_reason">退回理由：</string>
    <string name="message">留言</string>
    <string name="report_over_flow">99+</string>
    <string name="export">导出</string>
    <string name="new_item">新建消费</string>
    <string name="approve_info_hint">审批情况 ></string>
    <string name="approve_info">审批情况</string>
    <string name="ready_to_submitted">待提交</string>
    <string name="submitted">已提交</string>
    <string name="ready_to_approve">待审批</string>
    <string name="approved">已通过</string>
    <string name="rejected">退回</string>
    <string name="revoked">已撤回</string>
    <string name="proxy_approved">（%1$s代审）</string>
    <string name="report_no_name">无标题报告</string>
    <string name="continue_to_choose">继续选择</string>
    <string name="choose_following_managers">选择后续审批人</string>
    <string name="individual">个人</string>
    <string name="group">团队</string>
    <string name="mark">标记</string>
    <string name="stat_ongoing">报销中</string>
    <string name="stat_new">待提交</string>
    <string name="new_reim">待报销</string>
    <string name="new_total">待报销总计</string>
    <string name="last_12_months">近12个月</string>
    <string name="stat_by_category">类别统计</string>
    <string name="stat_by_month">月份统计</string>
    <string name="stat_by_status">明细统计</string>
    <string name="stat_by_currency">货币统计</string>
    <string name="stat_by_department">部门统计</string>
    <string name="stat_by_tag">标签统计</string>
    <string name="stat_by_member">人员统计</string>
    <string name="choose_month">选择月份</string>
    <string name="deleted_category">已删除类别</string>
    <string name="stat_category">类别-</string>
    <string name="stat_tag">标签-</string>
    <string name="stat_user">人员-</string>
    <string name="stat_status">明细-</string>
    <string name="stat_currency">货币-</string>
    <string name="stat_department">部门-</string>
    <string name="personal_center">个人中心</string>
    <string name="sign_out">退出登录</string>
    <string name="avatar">头像</string>
    <string name="enable_password_protection">开启密码保护</string>
    <string name="sync_without_wifi">仅WiFi开启时上传云端</string>
    <string name="preference">偏好设置</string>
    <string name="invoice_title">发票抬头</string>
    <string name="import_expenses">导入消费</string>
    <string name="my_messages">我的消息</string>
    <string name="message_from_admin">来自管理员的消息</string>
    <string name="message_reference">\n\n-----以下是你于%1$s发送的内容-----\n\n</string>
    <string name="invite">邀请同事</string>
    <string name="email">邮箱</string>
    <string name="wechat">微信</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="version">版本</string>
    <string name="about_footer">Copyright&#169; 2014&#8211;2015 北京如数科技有限公司</string>
    <string name="input_password">请输入密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_nickname">请填写你的真实姓名</string>
    <string name="input_feedback">请输入你的意见或建议</string>
    <string name="prompt_feedback">告诉我们你在使用过程中遇到的问题，或对产品提出你的建议。我们会在1个工作日内给你答复。</string>
</resources>