<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/baseLayout" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/start_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back_drawable" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/complete_info"
            android:textColor="@color/major_light"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/info_avatar" />

        <EditText
            android:id="@+id/nicknameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/input_nickname"
            android:textColor="@color/font_major_light"
            android:textColorHint="@color/hint_white"
            android:background="@null"
            android:textCursorDrawable="@null"/>

        <include
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            layout="@layout/view_start_divider"/>

        <Button
            android:id="@+id/completeButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_light_solid_drawable"
            android:text="@string/complete"
            android:textColor="@color/start_button_text_color"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>