<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/baseLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/window_background"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/feedback"
        android:textColor="@color/font_major_dark"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/prompt_feedback"
        android:textColor="@color/font_major_dark"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/feedbackEditText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/major_light"
        android:gravity="top"
        android:hint="@string/input_feedback"
        android:inputType="textMultiLine"
        android:textColor="@color/font_major_dark"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/window_button_height"
			android:layout_toLeftOf="@+id/pivotView"
            android:layout_marginRight="5dp"
            android:background="@drawable/feedback_button_dark_drawable"
            android:text="@string/submit"
            android:textColor="@color/button_text_light_color" />

        <View
            android:id="@+id/pivotView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/window_button_height"
			android:layout_toRightOf="@+id/pivotView"
            android:layout_marginLeft="5dp"
            android:background="@drawable/feedback_button_light_drawable"
            android:text="@string/cancel"
            android:textColor="@color/button_text_dark_color" />

    </RelativeLayout>

</LinearLayout>