<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/start_background"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/start_icon"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_above="@+id/signInButton"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/button_light_solid_drawable"
        android:text="@string/sign_up"
        android:textColor="@color/button_text_dark_color"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_above="@+id/dividerLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_light_border_drawable"
        android:text="@string/sign_in"
        android:textColor="@color/button_text_light_color"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/dividerLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wechatImageView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/start_divider"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/third_party_sign_in"
            android:textColor="@color/start_divider"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/start_divider"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/wechatImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/wechat"
        android:src="@drawable/wechat"/>

</RelativeLayout>
