<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/baseLayout">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/start_background"/>

    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back_drawable"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/start_icon"/>

        <classes.widget.ClearEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:drawableRight="@drawable/delete_start_drawable"
            android:textColor="@color/font_major_light"
            android:textColorHint="@color/hint_white"
            android:background="@null"
            android:textCursorDrawable="@null"/>

        <include
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            layout="@layout/view_start_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <classes.widget.ClearEditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="12dp"
                android:hint="@string/input_password"
                android:drawableRight="@drawable/delete_start_drawable"
                android:textColor="@color/font_major_light"
                android:textColorHint="@color/hint_white"
                android:background="@null"
                android:textCursorDrawable="@null"/>

            <ImageView
                android:id="@+id/passwordImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/password"
                android:src="@drawable/eye_blank"/>

        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            layout="@layout/view_start_divider"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/codeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="10dp"
                android:hint="@string/input_code"
                android:inputType="number"
                android:textColor="@color/font_major_light"
                android:textColorHint="@color/hint_white"
                android:background="@null"
                android:textCursorDrawable="@null"/>

            <Button
                android:id="@+id/acquireCodeButton"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_light_solid_drawable"
                android:gravity="center"
                android:text="@string/acquire_code"
                android:textColor="@color/start_button_text_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            layout="@layout/view_start_divider"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_light_solid_drawable"
            android:text="@string/sign_up"
            android:textColor="@color/start_button_text_color"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dividerLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/start_divider"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/other_sign_up_ways"
            android:textColor="@color/start_divider"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/start_divider"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp">

        <ImageView
            android:id="@+id/emailImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/email"
            android:src="@drawable/email"/>

        <ImageView
            android:id="@+id/wechatImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/wechat"
            android:src="@drawable/wechat"/>

    </LinearLayout>

</RelativeLayout>